--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "dependencies": {
     "firebase": "^3.6.1",
     "react": "15.3.2",
-    "react-native": "0.37.0"
+    "react-native": "0.37.0",
+    "react-native-swiper": "^1.5.4"
   },
   "jest": {
     "preset": "jest-react-native"
