--- a/package.json
+++ b/package.json
@@ -7,11 +7,13 @@
     "test": "jest"
   },
   "dependencies": {
+    "carousel": "0.0.3",
     "firebase": "^3.6.1",
     "react": "15.3.2",
-    "react-native": "0.37.0",
+    "react-native": "^0.37.0",
+    "react-native-carousel": "^0.10.0",
+    "react-native-gifted-chat": "0.0.10",
     "react-native-swiper": "^1.5.4"
-    "react-native-gifted-chat": "0.0.10"
   },
   "jest": {
     "preset": "jest-react-native"
