--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,7 @@ buck-out/
 \.buckd/
 android/app/libs
 android/keystores/debug.keystore
+
+# fastlane (dev pushing to itunes connect)
+fastlane/
+jumbosmash.app.dSYM.zip
