--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react-native-gifted-chat": "0.0.10",
     "react-native-image-crop-picker": "^0.11.2",
     "react-native-mail": "^2.0.0",
-    "react-native-swiper": "^1.5.4"
+    "react-native-swiper": "^1.5.4",
+    "react-native-vector-icons": "^4.0.0"
   },
   "jest": {
     "preset": "jest-react-native"
