--- a/ios/Podfile
+++ b/ios/Podfile
@@ -7,6 +7,7 @@ target 'jumbosmash' do
 
   pod 'RSKImageCropper'
   pod 'QBImagePickerController'
+  pod 'Firebase/Auth'
 
   target 'jumbosmashTests' do
     inherit! :search_paths
