--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -126,6 +126,7 @@ android {
 }
 
 dependencies {
+    compile project(':react-native-image-resizer')
     compile project(':react-native-mail')
     compile project(':react-native-fetch-blob')
     compile project(':react-native-image-crop-picker')
