--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-native-fetch-blob": "^0.10.2",
     "react-native-gifted-chat": "0.0.10",
     "react-native-image-crop-picker": "^0.11.2",
+    "react-native-image-resizer": "0.0.12",
     "react-native-mail": "^2.0.0",
     "react-native-swiper": "^1.5.4"
   },
