--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-native-image-crop-picker": "^0.11.2",
     "react-native-image-resizer": "0.0.12",
     "react-native-mail": "^2.0.0",
+    "react-native-push-notification": "^2.2.1",
     "react-native-swiper": "^1.5.4"
   },
   "jest": {
