--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "firebase": "^3.6.1",
     "react": "15.3.2",
     "react-native": "^0.37.0",
+    "react-native-actionsheet": "^2.0.6",
     "react-native-carousel": "^0.10.0",
     "react-native-fetch-blob": "^0.10.2",
     "react-native-gifted-chat": "0.0.10",
