successfully upgraded to rn 0.42.3

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -89,6 +89,7 @@ android {
     defaultConfig {
         applicationId "com.jumbosmash"
         minSdkVersion 16
+        vectorDrawables.useSupportLibrary = true
         targetSdkVersion 22
         versionCode 1
         versionName "1.0"
@@ -126,6 +127,11 @@ android {
 }
 
 dependencies {
+    compile project(':react-native-push-notification')
+    compile project(':react-native-mail')
+    compile project(':react-native-image-resizer')
+    compile project(':react-native-image-crop-picker')
+    compile project(':react-native-fetch-blob')
     compile fileTree(dir: "libs", include: ["*.jar"])
     compile "com.android.support:appcompat-v7:23.0.1"
     compile "com.facebook.react:react-native:+"  // From node_modules
