--- a/.gitignore
+++ b/.gitignore
@@ -23,17 +23,19 @@ DerivedData
 *.xcuserstate
 project.xcworkspace
 
-# Android/IJ
+# Android/IntelliJ
 #
-*.iml
+build/
 .idea
 .gradle
 local.properties
+*.iml
 
 # node.js
 #
 node_modules/
 npm-debug.log
+yarn-error.log
 
 # BUCK
 buck-out/
@@ -44,3 +46,15 @@ android/keystores/debug.keystore
 # fastlane (dev pushing to itunes connect)
 fastlane/
 jumbosmash.app.dSYM.zip
+*.keystore
+
+# fastlane
+#
+# It is recommended to not store the screenshots in the git repo. Instead, use fastlane to re-generate the
+# screenshots whenever they are needed.
+# For more information about the recommended setup visit:
+# https://github.com/fastlane/fastlane/blob/master/fastlane/docs/Gitignore.md
+
+# fastlane/report.xml
+# fastlane/Preview.html
+# fastlane/screenshots
