--- a/package.json
+++ b/package.json
@@ -9,15 +9,15 @@
   "dependencies": {
     "carousel": "0.0.3",
     "firebase": "^3.6.1",
-    "react": "15.3.2",
-    "react-native": "^0.37.0",
+    "react": "^15.4.2",
+    "react-native": "^0.42.3",
     "react-native-actionsheet": "^2.0.6",
     "react-native-carousel": "^0.10.0",
     "react-native-fetch-blob": "^0.10.2",
-    "react-native-gifted-chat": "0.0.10",
-    "react-native-image-crop-picker": "^0.11.2",
-    "react-native-image-resizer": "0.0.12",
-    "react-native-mail": "^2.0.0",
+    "react-native-gifted-chat": "0.1.3",
+    "react-native-image-crop-picker": "^0.12.9",
+    "react-native-image-resizer": "0.1.0",
+    "react-native-mail": "^3.0.1",
     "react-native-push-notification": "^2.2.1",
     "react-native-swiper": "^1.5.4"
   },
