--- a/ios/jumbosmash.xcodeproj/xcshareddata/xcschemes/jumbosmash.xcscheme
+++ b/ios/jumbosmash.xcodeproj/xcshareddata/xcschemes/jumbosmash.xcscheme
@@ -99,6 +99,12 @@
             ReferencedContainer = "container:jumbosmash.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
+      <CommandLineArguments>
+         <CommandLineArgument
+            argument = "-FIRDebugEnabled"
+            isEnabled = "YES">
+         </CommandLineArgument>
+      </CommandLineArguments>
       <AdditionalOptions>
       </AdditionalOptions>
    </LaunchAction>
