--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-native-actionsheet": "^2.0.6",
     "react-native-carousel": "^0.10.0",
     "react-native-fetch-blob": "^0.10.2",
+    "react-native-firebase-analytics": "^3.0.0",
     "react-native-gifted-chat": "0.1.3",
     "react-native-image-crop-picker": "^0.12.9",
     "react-native-image-resizer": "0.1.0",
