--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -84,9 +84,16 @@ def enableSeparateBuildPerCPUArchitecture = false
 def enableProguardInReleaseBuilds = false
 
 android {
+    signingConfigs {
+        config {
+            keyAlias 'JumboSmashKey'
+            keyPassword 'CWRK0164329758jumb'
+            storeFile file('/Users/richard/developer/keystores/jumbosmashKeystore.jks')
+            storePassword 'CWRK0164329758keys'
+        }
+    }
     compileSdkVersion 23
     buildToolsVersion '25.0.0'
-
     defaultConfig {
         applicationId "com.jumbosmash"
         minSdkVersion 16
@@ -110,6 +117,8 @@ android {
         release {
             minifyEnabled enableProguardInReleaseBuilds
             proguardFiles getDefaultProguardFile("proguard-android.txt"), "proguard-rules.pro"
+            debuggable true
+            signingConfig signingConfigs.config
         }
     }
     // applicationVariants are e.g. debug, release
@@ -117,7 +126,7 @@ android {
         variant.outputs.each { output ->
             // For each separate APK per architecture, set a unique version code as described here:
             // http://tools.android.com/tech-docs/new-build-system/user-guide/apk-splits
-            def versionCodes = ["armeabi-v7a":1, "x86":2]
+            def versionCodes = ["armeabi-v7a": 1, "x86": 2]
             def abi = output.getFilter(OutputFile.ABI)
             if (abi != null) {  // null for the universal-debug, universal-release variants
                 output.versionCodeOverride =
@@ -133,10 +142,11 @@ dependencies {
     compile project(':react-native-image-resizer')
     compile project(':react-native-image-crop-picker')
     compile project(':react-native-fetch-blob')
-    compile fileTree(dir: "libs", include: ["*.jar"])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     compile project(':RNMail')
-    compile "com.android.support:appcompat-v7:23.0.1"
-    compile "com.facebook.react:react-native:+"  // From node_modules
+    compile 'com.android.support:appcompat-v7:23.0.1'
+    compile 'com.facebook.react:react-native:+'
+    // From node_modules
 }
 
 // Run this once to be able to run the application with BUCK
