--- a/ios/Podfile
+++ b/ios/Podfile
@@ -5,6 +5,9 @@ target 'jumbosmash' do
   # Uncomment the next line if you're using Swift or would like to use dynamic frameworks
   # use_frameworks!
 
+  pod 'Firebase/Core'
+  pod 'Firebase/Crash'
+
   pod 'RSKImageCropper'
   pod 'QBImagePickerController'
   pod 'Firebase/Auth'
