--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-native-carousel": "^0.10.0",
     "react-native-fetch-blob": "^0.10.2",
     "react-native-firebase-analytics": "^3.0.0",
+    "react-native-firebase-crash-report": "^1.2.0",
     "react-native-gifted-chat": "0.1.3",
     "react-native-image-crop-picker": "^0.12.9",
     "react-native-image-resizer": "0.1.0",
